@@ -1,18 +1,8 @@
-## Getting Started
+Use java -jar --enable-preview [jar] [enter an integer or pass a text file]
+to use the program.
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
-
-## Folder Structure
-
-The workspace contains two folders by default, where:
-
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
-
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
-
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
-
-## Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+Example of output:
+$ java --enable-preview -jar bubblesort.jar filename.txt 
+Is the intial array sorted? false
+Bubble Sort took 1ms to sort the array
+Is the final array sorted? true
